--- a/emacs/config.org
+++ b/emacs/config.org
@@ -225,6 +225,8 @@ Jumping around the buffer: [[https://github.com/abo-abo/avy][avy]]
       :keymaps 'override
       "o" '(hydra-neotree/body :which-key "NeoTree")))
 #+end_src
+
+** Bookmarks
 * APPEARANCE
 ** Theme
 Using the Solaized theme
@@ -664,10 +666,119 @@ Install the ~org-contrib~ packge to get more languages
     (setq org-cite-follow-processor 'helm-bibtex-org-cite-follow)
     (setq org-cite-global-bibliography '("~/Work/.library/ref.bib"))
   #+end_src
+
 ** LaTeX
 #+begin_src emacs-lisp :results none
-(setq org-latex-to-pdf-process (list "latexmk -pdf %f"))
+  (setq org-latex-to-pdf-process (list "latexmk -pdf %f"))
 #+end_src
+*** AUCTex
+#+begin_src emacs-lisp :results none
+
+    (defun my/latex-mode-hook ()
+      (advice-add #'TeX-command-master :before (lambda (&rest r) (save-buffer)))
+      (push (list 'output-pdf "Zathura") TeX-view-program-selection))
+
+    (use-package auctex
+      :ensure t
+      :defer t
+      :hook
+      (LaTeX-mode . my/latex-mode-hook)
+      (LaTeX-mode . turn-on-prettify-symbols-mode)
+      :bind (:map LaTeX-mode-map
+                  ("C-c b" . my/vertico-bibtex))
+      )
+  (add-hook 'LaTeX-mode-hook 'turn-on-reftex) ; Enable RefTeX with AUCTeX
+  (setq reftex-plug-into-AUCTeX t)
+
+#+end_src
+*** References
+  #+begin_src emacs-lisp :results none
+            (use-package marginalia
+              :ensure t
+              :config
+              (marginalia-mode 1))
+            (defun my/bibtex-generate-autokey (&rest r)
+                      (let* ((names (bibtex-autokey-get-names))
+                             (year (bibtex-autokey-get-year))
+                             (title (bibtex-autokey-get-title)))
+                        (capitalize (format "%s%s" names year))))
+            (advice-add #'bibtex-generate-autokey :around #'my/bibtex-generate-autokey)
+
+            (defun my/vertico-bibtex--get-field (key candidate)
+              "return the field matching KEY in CANDIDATE"
+              (alist-get key (cdr candidate) nil nil #'string=))
+
+            (defun vertico-bibtex--maybe-truncate (field len)
+              (if field
+                  (substring field 0 (min len (length field)))
+                field))
+            (defun my/vertico-bibtex--build-map (candidates)
+              (mapcar
+               (lambda (cand)
+                 (let* ((key (my/vertico-bibtex--get-field "=key=" cand))
+                        (title (vertico-bibtex--maybe-truncate
+                                (my/vertico-bibtex--get-field "title" cand)
+                                35))
+                        (author (vertico-bibtex--maybe-truncate
+                                 (aif (my/vertico-bibtex--get-field "author" cand)
+                                      (string-replace " and " ", " it) it)
+                                 40))
+                        (book (my/vertico-bibtex--get-field "booktitle" cand))
+                        (journal (my/vertico-bibtex--get-field "journal" cand)))
+                   `(,key . (:title ,title :author ,author :journal ,(or journal book)))))
+               candidates))
+            (defun my/vertico-bibtex (&optional arg)
+              "insert a bibtex citation at point using `completing-read`. if
+            ARG is non-nil, refresh the bibtex-completion cache"
+              (interactive "P")
+              (when arg
+                (bibtex-completion-clear-cache))
+              (bibtex-completion-init)
+              (let* ((candidates (bibtex-completion-candidates))
+                     (map (my/vertico-bibtex--build-map candidates))
+                     (keys (mapcar #'car map))
+                     (completion-extra-properties
+                      (list
+                       :annotation-function
+                       (lambda (key)
+                         (let ((obj (alist-get key map nil nil #'string=)))
+                           (marginalia--fields
+                            ((plist-get obj :title) :width 35 :truncate 0.5 :face 'marginalia-string)
+                            ((plist-get obj :author) :width 40 :truncate 0.5 :face 'marginalia-documentation)
+                            ((plist-get obj :journal) :width 30 :truncate 0.5 :face 'marginalia-value))))))
+                     (selection (completing-read "Insert citation: " keys)))
+                (when selection
+                  (insert selection))))
+
+        (defun my/vertico-bibtex (&optional arg)
+          "insert a bibtex citation at point using `completing-read`. if
+        ARG is non-nil, refresh the bibtex-completion cache"
+          (interactive "P")
+          (when arg
+            (bibtex-completion-clear-cache))
+          (bibtex-completion-init)
+          (let* ((candidates (bibtex-completion-candidates))
+                 (map (my/vertico-bibtex--build-map candidates))
+                 (keys (mapcar #'car map))
+                 (completion-extra-properties
+                  (list
+                   :annotation-function
+                   (lambda (key)
+                     (let ((obj (alist-get key map nil nil #'string=)))
+                       (marginalia--fields
+                        ((plist-get obj :title) :width 35 :truncate 0.5 :face 'marginalia-string)
+                        ((plist-get obj :author) :width 40 :truncate 0.5 :face 'marginalia-documentation)
+                        ((plist-get obj :journal) :width 30 :truncate 0.5 :face 'marginalia-value))))))
+                 (selection (completing-read "Insert citation: " keys)))
+            (when selection
+              (insert selection))))
+
+    (defmacro aif (cnd then else)
+      "anaphoric if from paul graham's on lisp. bind the result of CND
+    to IT for use in the THEN and ELSE clauses"
+      `(let ((it ,cnd))
+         (if it ,then ,else))) 
+  #+end_src
 ** Projectile
 
 #+begin_src emacs-lisp :results none
@@ -738,6 +849,39 @@ Install the ~org-contrib~ packge to get more languages
      mu4e-headers-encrypted-mark '("e" . "")))
 #+end_src
 
+** Magit
+Magit is a git client for emacs
+#+begin_src emacs-lisp :results none
+  (use-package magit
+    :ensure t
+    :config
+    (defhydra hydra-magit (:color blue :hint nil)
+      "
+                Magit Commands
+      ^^^^^————————————————————————————————————————————
+      [_s_]   Status      [_b_]   Blame
+      [_c_]   Commit      [_l_]   Log
+      [_d_]   Diff        [_p_]   Pull
+      [_P_]   Push        [_f_]   Fetch
+      [_q_]   Quit Hydra
+      "
+      ("s" magit-status)
+      ("b" magit-blame)
+      ("c" magit-commit)
+      ("l" magit-log)
+      ("d" magit-diff)
+      ("p" magit-pull)
+      ("P" magit-push)
+      ("f" magit-fetch)
+      ("q" nil :exit t))
+    (general-override-mode)
+    (general-define-key
+     :prefix "SPC"
+     :states '(motion normal visual)
+     :keymaps 'override
+     "m" '(hydra-magit/body :which-key "Magit"))
+    )
+#+end_src
 * GTD (Org Agend)
 This section configures my GTD workflow.
 We configure work states
